# TileBasedOptim

./: .project  README.md  TileBasedOptim.nb  oneJob.bash  runJobs.bash  run_M1.bash  run_ubu64.bash  x.bash
MatBuilder_profiles/: 2D_0m2net.txt  3D_0m2net.txt
TileBasedOptim/: TileBasedOptim.m
TileBasedOptim/Kernel/: init.m
Tiles_Pointsets_PrevLevel/: concatSet.sh
data_MSE/2D/SoftEllipses/: MSEOptimisationSoftEllipses_SoftEllipses_
lois/profiles/: cascaded.txt  cascadedPropA.txt  format_test.txt  generic_OA.txt  generic_mixed.txt  generic_net.txt  generic_netFullu6.txt  optimal_control.txt  rendering.txt  rendering_u.txt  strat3D.txt  texture.txt  texture4d.txt  textureCasc.txt  textureEnglish.txt  weak_net.txt  weak_strat.txt
lois/profiles/FF/: cascaded_5D.txt  cascaded_net_5D.txt  net01_5D.txt  nets.txt  plot_nets.nb  random_5D.txt  test.txt
lois/profiles/tvalue/: net4D_t1_no_t0.txt  net4D_t1_t0.txt  net_t0.txt  net_t1.txt  net_t2.txt  net_t3.txt  net_t4.txt  nets.txt
run_in2p3/: go_SoftEllipses_Pointsets.sh  go_SoftEllipses_Seq.sh  launcher_SoftEllipses_Pointsets.sh  launcher_SoftEllipses_Seq.sh  oneJob_SoftEllipses_Pointsets.sh  oneJob_SoftEllipses_Seq.sh
run_in2p3_VarSize/: launcher_SoftEllipses_Pointsets.sh  oneJob_SoftEllipses_Pointsets.sh
run_linux/: go_SoftEllipses_Pointsets.sh  go_SoftEllipses_Seq.sh  launcher_SoftEllipses_Pointsets.sh  launcher_SoftEllipses_Seq.sh  oneJob_SoftEllipses_Pointsets.sh  oneJob_SoftEllipses_Seq.sh
run_linux_VarSize/: go_SoftEllipses_Pointsets.sh  oneJob_SoftEllipses_Pointsets.sh
save/: AALDS._m_  AALDS_20160113._m_  AALDS_20160119._m_  AALDS_20160313._m_  TileBasedOptim._m_  fibo-filbert._m_  fibo-filbert.nb  save-TileBasedOptim._m_  unity_20180612._m_  unity_r6859._m_  unity_working_dbgexpSobolBased._m_
src/MatBuilderPlusPlus/: README.md
src/MatBuilderPlusPlus/ScriptCreator/: CMakeLists.txt  ScriptCreator.cpp
src/MatBuilderPlusPlus/ScriptCreator/include/Configurations/ConfigurationConfigFile/: CMakeLists.txt  ConfigurationConfigFile.cpp  ConfigurationConfigFile.hpp
src/MatBuilderPlusPlus/ScriptCreator/include/Configurations/ConfigurationMB/: CMakeLists.txt  ConfigurationMB.cpp  ConfigurationMB.hpp
src/MatBuilderPlusPlus/data/: config.txt  profile.txt
src/MatBuilderPlusPlus/optimizer/: .gitignore  .tags  .tags1  CMakeLists.txt  OptimME.cpp
src/MatBuilderPlusPlus/optimizer/Lib/Integrand/: Integrand.hpp
src/MatBuilderPlusPlus/optimizer/Lib/Tiles/: Tiles.hpp
src/New_Optimize_MSE_2DTiles/: OptimME.cpp
src/New_Optimize_MSE_2DTiles/Source/: .tags  .tags1  CMakeLists.txt  OptimME.cpp
src/New_Optimize_MSE_2DTiles/Versions/in2p3/: OneRepetitionOneLevel_SoftEllipses.sh  batch_SoftEllipses.sh  go_SoftEllipses_Pointsets.sh  go_SoftEllipses_Seq.sh  launcher_SoftEllipses_Pointsets.sh  launcher_SoftEllipses_Seq.sh  oneJob_SoftEllipses_Pointsets.sh  oneJob_SoftEllipses_Seq.sh  runOneRepetitionLauncher_SoftEllipses.sh  runOneRepetition_SoftEllipses.sh
src/OptimME/: .tags  .tags1  CMakeLists.txt  OptimME.cpp
src/OptimME/Data/Intégrandes/Ellipses/HardEllipses/: Ellipses2D_nIntegrands16384_optimSet.cpp  Ellipses2D_nIntegrands16384_testSet.cpp
src/OptimME/Data/Intégrandes/Gaussiennes/: Gauss2D.cpp  betterGauss2D.h
src/OptimME/Data/Intégrandes/Rectangles/HardRectangles/: Rectangles2D_nIntegrands16384_optimSet.cpp
src/OptimME/Data/Optim_Data_Input/PointSet_Only/: rename.sh
src/OptimME/Lib/Math/: MatXDynamic.cpp
src/OptimME/Lib/MultivariateGaussian/: CMakeLists.txt  Integration.h  multivariateGaussian.cpp  multivariateGaussian.h
src/OptimME/Lib/MultivariateGaussian/IntegrationTests/: CMakeLists.txt  integrationTests.cpp  integrationTests.h
src/OptimME/Lib/Tiles/: Tiles.hpp
src/OptimME/Lib/Tiles/DirectionnalVector/: CMakeLists.txt
src/OptimME/Lib/Tiles/Points/: CMakeLists.txt  Points.hpp
src/OptimTiles2D/: .tags1  CMakeLists-in2p3.txt  CMakeLists.txt  OptimTiles2D.cpp
src/OptimTiles2D/Lib/Tile/Points_2D/: Points_2D.cpp
src/OptimTilesND/: .tags  .tags1  CMakeLists.txt  OptimTilesND.cpp
src/OptimTilesND/Lib/Discrepancy/: Disc.cpp  Disc.h
src/OptimTilesND/Lib/Tiles/: Tiles.hpp
src/OptimTilesND/Lib/Tiles/DirectionnalVector/: DirectionnalVector.cpp
src/Optimize_L2Discrepancy_2DTiles_Noise_Cancelling/Optimize_L2Discrepancy_For_2D_Tiles/: .tags  .tags1  CMakeLists.txt  OptimTiles2D.cpp
src/Optimize_L2Discrepancy_2DTiles_Noise_Cancelling/Optimize_L2Discrepancy_For_2D_Tiles/Lib/Tile/: Tiles.cpp  Tiles.h
src/Optimize_L2Discrepancy_2DTiles_Noise_Cancelling/Optimize_L2Discrepancy_For_2D_Tiles/Lib/Tile/Points_2D/: CMakeLists.txt  Points_2D.h
src/Optimize_L2Discrepancy_2DTiles_Noise_Cancelling/in2p3Version/: runOneRepetitionLauncher.sh  runOneRepetitionOneLevel.sh
src/Optimize_L2Discrepancy_2DTiles_Noise_Cancelling/ubu64Version/: batch.sh  runOneRepetition.sh
src/Optimize_L2Discrepancy_2DTiles_Tree/: CMakeLists.txt  NewLemonTree.cpp
src/Optimize_MSE_2DTiles/: CMakeLists.txt  OptimME.cpp
src/Optimize_MSE_2DTiles/Optimize_MSE_2DTiles/: CMakeLists.txt  OptimME.cpp
src/Optimize_MSE_2DTiles/in2p3Version/: runOneRepetitionLauncher.sh  runOneRepetitionOneLevel.sh
src/Optimize_MSE_2DTiles/ubu32Version/: batch_Heaviside.sh  batch_SoftEllipses.sh  runOneRepetition_Heaviside.sh  runOneRepetition_SoftEllipses.sh
src/Optimize_MSE_2DTiles/ubu64Version/: batch.sh  batch_Heaviside.sh  batch_SoftEllipses.sh  runOneRepetition.sh  runOneRepetition_Heaviside.sh  runOneRepetition_SoftEllipses.sh
src/Optimize_MSE_3DTiles/: OptimME.cpp
src/save/Optimize_MSE_3DTiles/: CMakeLists.txt
src/save/Optimize_MSE_3DTiles/Lib/Math/: MatXDynamic.cpp  myMath.h
src/save/Optimize_MSE_3DTiles/Lib/Tiles/: CMakeLists.txt
src/src_new_integrateND_from_file/: .cproject  .project  CMakeLists.txt  new_integrateND_from_file.cpp
src/src_new_integrateND_from_file/Integrands/: Heaviside2D.cpp  Heaviside3D.cpp  Heaviside4D.cpp  Heaviside5D.cpp
src/src_new_integrateND_from_file/includes/: OwenScrambling.h  Random.h  SobolGenerator1D.h  VecX.h  drand48.cpp  drand48.h  io.h  new_Integration.h
(+67 files in other folders)
